ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: guess.com
      http:
        paths:
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 8000
